--- a/src/Agenda.WebApp/src/app/pages/login/login.component.html
+++ b/src/Agenda.WebApp/src/app/pages/login/login.component.html
@@ -1,1 +1,9 @@
-<login-form />
+<div class="container-login">
+    <div class="form-login">
+        <h2>Realize o login</h2>
+        <p>
+            Informe seu telefone
+        </p>
+        <login-form />
+    </div>
+</div>
