feat: add page verify code sms

--- a/src/Agenda.WebApp/src/app/pages/login/login.component.html
+++ b/src/Agenda.WebApp/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container-login">
     <div class="form-login">
-        <h2>Realize o login</h2>
+        <h2>Confirme seu celular</h2>
         <p>
-            Informe seu telefone
+            Informe o número
         </p>
         <login-form />
     </div>
