--- a/src/Agenda.WebApp/src/app/pages/verify/verify.component.scss
+++ b/src/Agenda.WebApp/src/app/pages/verify/verify.component.scss
@@ -1,23 +1,26 @@
-.container-login {
+.container-verify {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.form-login {
-    width: 500px;
+.form-verify {
+    width: 400px;
     background-color: #fff;
     text-align: center;
     padding: 50px;   
 }
 
-.form-login h2{
-    font-size:  26px;
-    width: 100%;
+.form-verify h3{
+    font-size: 18px;
 }
 
-.form-login p{
+.form-verify h3 span{
+    font-weight: 700;
+}
+
+.form-verify p{
     color:#999;
     font-size: 16px;
     line-height: 24px;
