--- a/src/Agenda.WebApp/src/app/pages/verify/verify.component.scss
+++ b/src/Agenda.WebApp/src/app/pages/verify/verify.component.scss
@@ -1,4 +1,5 @@
 .container-verify {
+    position: relative;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -6,6 +7,7 @@
 }
 
 .form-verify {
+    position: absolute;
     width: 400px;
     background-color: #fff;
     text-align: center;
