feat: add parameter send to verify with mask.

--- a/src/Agenda.WebApp/src/app/components/login-form/login-form.component.html
+++ b/src/Agenda.WebApp/src/app/components/login-form/login-form.component.html
@@ -2,7 +2,7 @@
 
     <mat-form-field class="full-width">
         <span matTextPrefix>+55 &nbsp;</span>
-        <input type="tel" mask="(00) 0000-0000||(00) 0 0000-0000" formControlName="phoneNumber" matInput placeholder="(00) 0 0000-0000">
+        <input type="tel" mask="(00) 0 0000-0000" formControlName="phoneNumber" matInput placeholder="(00) 0 0000-0000">
         <mat-icon matSuffix>phone_iphone</mat-icon>
     </mat-form-field>
 
