--- a/src/Agenda.WebApp/src/app/pages/verify/verify.component.html
+++ b/src/Agenda.WebApp/src/app/pages/verify/verify.component.html
@@ -1,6 +1,6 @@
 <div class="container-verify">
     <div class="form-verify">
-        <h3>Enviado para <span>+55 85 9 8525-0317</span></h3>
+        <h3>Enviado para <span>{{ sendTo | mask: '+00 (00) 0 0000-0000' }}</span></h3>
         <p>
             Insira abaixo o código que você receberá por SMS
         </p>
