refactor: send by type of check

--- a/src/Agenda.WebApp/src/app/components/login-form/login-form.component.html
+++ b/src/Agenda.WebApp/src/app/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formLogin" (submit)="login()">
+<form [formGroup]="formLogin" (submit)="login(0)">
 
     <mat-form-field class="full-width">
         <span matTextPrefix>+55 &nbsp;</span>
