--- a/src/Agenda.WebApp/src/app/dialogs/verify/verify.component.html
+++ b/src/Agenda.WebApp/src/app/dialogs/verify/verify.component.html
@@ -1,6 +1,6 @@
-<div class="container-verify">
+<h1 mat-dialog-title>Enviado para <span>{{ data.sendTo | mask: '+00 (00) 0 0000-0000' }}</span></h1>
+<div mat-dialog-content>
     <div class="form-verify">
-        <h3>Enviado para <span>{{ sendTo | mask: '+00 (00) 0 0000-0000' }}</span></h3>
         <p>
             Insira abaixo o código que você receberá por SMS
         </p>
