--- a/src/Agenda.WebApp/src/app/pages/login/login.component.html
+++ b/src/Agenda.WebApp/src/app/pages/login/login.component.html
@@ -1,9 +1,6 @@
 <div class="container-login">
     <div class="form-login">
-        <h2>Confirme seu celular</h2>
-        <p>
-            Informe o número
-        </p>
+        <h2>Confirme seus dados</h2>
         <login-form />
     </div>
 </div>
